--- a/login/login.css
+++ b/login/login.css
@@ -10,6 +10,7 @@
     box-sizing: border-box;
     box-shadow: 0 15px 25px rgba(0,0,0,.6);
     border-radius: 10px;
+    /* display: none; */
   }
   
   .login-box p:first-child {
