--- a/login/login.css
+++ b/login/login.css
@@ -1,3 +1,8 @@
+body{
+  background: transparent;
+  background-size: cover;
+}
+
 .login-box {
     position: absolute;
     top: 50%;
@@ -6,17 +11,18 @@
     padding: 40px;
     margin: 20px auto;
     transform: translate(-50%, -55%);
-    background: rgba(0,0,0,.9);
+    background: rgba(255, 254, 254, 0.9);
     box-sizing: border-box;
-    box-shadow: 0 15px 25px rgba(0,0,0,.6);
+    box-shadow: 0 15px 25px rgba(0, 0, 0, 0.6);
     border-radius: 10px;
     /* display: none; */
+    /* background: transparent; */
   }
   
   .login-box p:first-child {
     margin: 0 0 30px;
     padding: 0;
-    color: #fff;
+    color: #000000;
     text-align: center;
     font-size: 1.5rem;
     font-weight: bold;
@@ -31,10 +37,10 @@
     width: 100%;
     padding: 10px 0;
     font-size: 16px;
-    color: #fff;
+    color: #000000;
     margin-bottom: 30px;
     border: none;
-    border-bottom: 1px solid #fff;
+    border-bottom: 1px solid #000000;
     outline: none;
     background: transparent;
   }
@@ -45,7 +51,7 @@
     left: 0;
     padding: 10px 0;
     font-size: 16px;
-    color: #fff;
+    color: #000000;
     pointer-events: none;
     transition: .5s;
   }
@@ -54,7 +60,7 @@
   .login-box .user-box input:valid ~ label {
     top: -20px;
     left: 0;
-    color: #fff;
+    color: #000000;
     font-size: 12px;
   }
   
@@ -63,7 +69,7 @@
     display: inline-block;
     padding: 10px 20px;
     font-weight: bold;
-    color: #fff;
+    color: #000000;
     font-size: 16px;
     text-decoration: none;
     text-transform: uppercase;
@@ -74,7 +80,7 @@
   }
   
   .login-box a:hover {
-    background: #fff;
+    background: #000000;
     color: #272727;
     border-radius: 5px;
   }
@@ -89,7 +95,7 @@
     left: -100%;
     width: 100%;
     height: 2px;
-    background: linear-gradient(90deg, transparent, #fff);
+    background: linear-gradient(90deg, transparent, #000000);
     animation: btn-anim1 1.5s linear infinite;
   }
   
@@ -108,7 +114,7 @@
     right: 0;
     width: 2px;
     height: 100%;
-    background: linear-gradient(180deg, transparent, #fff);
+    background: linear-gradient(180deg, transparent, #000000);
     animation: btn-anim2 1.5s linear infinite;
     animation-delay: .375s
   }
@@ -128,7 +134,7 @@
     right: -100%;
     width: 100%;
     height: 2px;
-    background: linear-gradient(270deg, transparent, #fff);
+    background: linear-gradient(270deg, transparent, #000000);
     animation: btn-anim3 1.5s linear infinite;
     animation-delay: .75s
   }
@@ -148,7 +154,7 @@
     left: 0;
     width: 2px;
     height: 100%;
-    background: linear-gradient(360deg, transparent, #fff);
+    background: linear-gradient(360deg, transparent, #000000);
     animation: btn-anim4 1.5s linear infinite;
     animation-delay: 1.125s
   }
@@ -169,12 +175,12 @@
   }
   
   .login-box a.a2 {
-    color: #fff;
+    color: #000000;
     text-decoration: none;
   }
   
   .login-box a.a2:hover {
     background: transparent;
-    color: #aaa;
+    color: #636161;
     border-radius: 5px;
   }
