--- a/product/mens.css
+++ b/product/mens.css
@@ -30,9 +30,15 @@
             justify-content: space-between;
             /* height: 100px; */
         }
+        #divided h3, h4{
+            margin: 5px;
+        }
+        #divided img{
+            height: 300px;
+        }
 
         #d1{
-            width: 70%;
+            width: 20%;
             /* border: 1px solid black; */
         }
         #d1 > li{
@@ -43,7 +49,7 @@
             padding: 15px 0px 0px 50px;
         }
         #d1 > li:hover{
-            background-color: rgb(214, 208, 208);
+            background-color: rgb(238, 235, 235);
             box-shadow: 8px 8px 5px 0px rgb(95, 95, 98);
             /* border-bottom-left-radius: 10px; */
             /* border-bottom-right-radius: 10px; */
@@ -77,13 +83,9 @@
             justify-content: center;
             align-items: center;
             border-radius: 5%;
-            /* background-color: rgb(251, 236, 216); */
-            /* box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset; */
-            /* box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px; */
-
             box-shadow: -3px -3px 5px rgba(255, 255, 255, .5),
             3px 3px 5px rgba(0, 0, 0, .25);
-      transition: .3s ease-in-out;
+             transition: .3s ease-in-out;
         }
         #cloth:hover{
             box-decoration-break: clone;
@@ -91,6 +93,14 @@
         }
         #cloth > img{
             width: 100%;
+            /* height: 400px; */
+            border-radius: 20px;
+        }
+        #cloth > img:hover{
+            zoom: 10px;
+        }
+        #s2{
+            height: 250px;
         }
         #cloth  button{
             width: 100px;
@@ -98,78 +108,23 @@
             background: #fff;
             box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
             border: none;
-            border-radius: 8px;
+            border-radius: 15px;
+            background-color: rgb(255, 255, 210);
         } 
 
+#cloth button{
+    color: rgb(0, 0, 0);
+    font-weight: bold;
+    background-color: #ffffff;
+    border: 0.5px solid black;
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 20px 25px -5px, rgba(0, 0, 0, 0.04) 0px 10px 10px -5px;
+    margin-bottom: 20px;
+}
 
+#cloth button:hover{
+    box-shadow: 8px 8px 5px 0px rgb(95, 95, 98);
+}
 
-
-        .switch-holder {
-            display: flex;
-            padding: 10px 20px;
-            border-radius: 10px;
-            box-shadow: -8px -8px 15px rgba(255, 255, 255, .7),
-            10px 10px 10px rgba(0, 0, 0, .2),
-            inset 8px 8px 15px rgba(255, 255, 255, .7),
-            inset 10px 10px 10px rgba(0, 0, 0, .2);
-            justify-content: space-between;
-            align-items: center;
-          }
-          
-          .switch-label {
-            padding: 0 20px 0 10px
-          }
-          
-          .switch-label i {
-            margin-right: 5px;
-          }
-          
-          .switch-toggle {
-            height: 40px;
-          }
-          
-          .switch-toggle input[type="checkbox"] {
-            position: absolute;
-            opacity: 0;
-            z-index: -2;
-          }
-          
-          .switch-toggle input[type="checkbox"]+label {
-            position: relative;
-            display: inline-block;
-            width: 100px;
-            height: 40px;
-            border-radius: 20px;
-            margin: 0;
-            cursor: pointer;
-            box-shadow: inset -8px -8px 15px rgba(255, 255, 255, .6),
-                  inset 10px 10px 10px rgba(0, 0, 0, .25);
-          }
-          
-          .switch-toggle input[type="checkbox"]+label::before {
-            position: absolute;
-            content: 'Add';
-            font-size: 13px;
-            text-align: center;
-            line-height: 25px;
-            top: 8px;
-            left: 8px;
-            width: 45px;
-            height: 25px;
-            border-radius: 20px;
-            background-color: #ffffff;
-            box-shadow: -3px -3px 5px rgba(255, 255, 255, .5),
-                  3px 3px 5px rgba(0, 0, 0, .25);
-            transition: .3s ease-in-out;
-            /* color: white; */
-            font-weight: bold;
-          }
-          
-          .switch-toggle input[type="checkbox"]:checked+label::before {
-            left: 50%;
-            content: 'Added';
-            color: #fff;
-            background-color: #00b33c;
-            box-shadow: -3px -3px 5px rgba(255, 255, 255, .5),
-                  3px 3px 5px #00b33c;
-          }
+.size{
+    height: 330px;
+}
